# Klonk

./: .gitignore  CMakeLists.txt  README.md  build.sh  runSpotify.sh  spotify.py
hardware/: klonk.blend
resource/: attribution.txt  fontMaker.py
src/: AppClock.cpp  AppHome.cpp  AppHome.h  AppSpotify.cpp  AppSpotify.h  Application.h  GenTextImage.cpp  Image.cpp  Image.h  KlonkError.h  MakeHomeButton.cpp  MakeHomeButton.h  Response.cpp  Response.h  SharedQueue.h  UserInterface.cpp  UserInterface.h  framebuffer.cpp  framebuffer.h  klonk.cpp  main.cpp  spotify.cpp  spotify.h  touch.h
src/apps/: AppClock.cpp  AppClock.h  AppHome.cpp  AppSettings.cpp  AppSettings.h  AppSpotify.cpp  AppSpotify.h  Application.h
src/spotify/: Response.cpp  Response.h  spotify.cpp  spotify.h
src/ui/: GenTextImage.h  Image.cpp  Image.h  MakeHomeButton.cpp  MakeHomeButton.h  UIImage.cpp  UIImage.h  UISpace.cpp  UISpace.h  UserInterface.cpp  UserInterface.h
src/uibackend/: Image.cpp  Image.h  framebuffer.cpp
src/util/: TimeInMs.cpp  TimeInMs.h
